
# --------------------------------------------------------------------
# Configurations
# --------------------------------------------------------------------
SET( BUILDSYS_APPLICATION_TELEPHONE "BrowserDemo" )
SET( BUILDSYS_TELEPHONE_OUTPUT_NAME "BrowserDemo" )

SET( CMAKE_INCLUDE_CURRENT_DIR ON )
SET( CMAKE_INCLUDE_DIRECTORIES_PROJECT_BEFORE ON )

BUILDSYS_ENABLE_EXCEPTIONS( FALSE )
BUILDSYS_ENABLE_RTTI( FALSE )

IF( BUILD_SHARED_LIBS )
    ADD_DEFINITIONS( -DBUILDSYS_SHARED_LIBS )
ENDIF( BUILD_SHARED_LIBS )

IF( BUILDSYS_ENABLE_SINGLE_APPLICATION )
    ADD_DEFINITIONS( -DBUILDSYS_ENABLE_SINGLE_APPLICATION )
ENDIF( BUILDSYS_ENABLE_SINGLE_APPLICATION)
IF( WIN32 )
    IF( BUILDSYS_ENABLE_ACTIVEQT_WORKAROUND )
        ADD_DEFINITIONS( -DBUILDSYS_ENABLE_ACTIVEQT_WORKAROUND )
    ENDIF( BUILDSYS_ENABLE_ACTIVEQT_WORKAROUND)
ENDIF( WIN32 )

# ADD_DEFINITIONS( -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_CAST_FROM_BYTEARRAY )

SET_DIRECTORY_PROPERTIES(
    PROPERTIES
    COMPILE_DEFINITIONS_RELEASE QT_NO_DEBUG_OUTPUT
    COMPILE_DEFINITIONS_RELWITHDEBINFO QT_NO_DEBUG_OUTPUT
    COMPILE_DEFINITIONS_MINSIZEREL QT_NO_DEBUG_OUTPUT
)

CONFIGURE_FILE( product.h.in product.h )

# --------------------------------------------------------------------
# Modules
# --------------------------------------------------------------------
MESSAGE( "CMAKE_CURRENT_BINARY_DIR=${CMAKE_CURRENT_BINARY_DIR}" )
INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_BINARY_DIR}
)

ADD_SUBDIRECTORY( browserdemo )

